# bitnames

./: Cargo.toml
src/: bitnames.rs  main.rs
